--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patas-source-pgsql",
-  "description": "PostgreSQL data source for Patas",
-  "version": "0.1",
+  "description": "The PostgreSQL data source for the Patas",
+  "version": "0.0.1",
   "author": "Lewis Deng <kekuer@gmail.com>",
   "contributors": [
     {
@@ -10,6 +10,7 @@
     }
   ],
   "keywords": [
+    "patas",
     "database",
     "cache",
     "postgresql"
@@ -24,11 +25,6 @@
   },
   "engines": {
     "node": ">= 0.2.0"
-  },
-  "scripts": {
-    "lint": "eslint lib test",
-    "lint - install": "npm install eslint@^1.10.2 eslint-config-standard@^4.4.0 eslint-plugin-standard@^1.3.1",
-    "test": "expresso test/*.js"
   },
   "license": "MIT",
   "dependencies": {
